Bug 1179069 - Remove docshell warnings in embedding. r=bz